--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: example-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://${CONFIG_SERVER_URI}:8888
